--- a/wiki/CSVStatus.wiki
+++ b/wiki/CSVStatus.wiki
@@ -9,15 +9,15 @@
    608 Mage_CatalogRule.csv  Assigned to rogerger.py progress 100%
    530 Mage_CatalogSearch.csv  Assigned to rogerger.py progress 100%
   8186 Mage_Checkout.csv   Assigned to rogerger.py progress 100%
-   124 Mage_Cms.csv
-  1954 Mage_Core.csv
+   124 Mage_Cms.csv        Assigned to rogerger.py progress 50%
+  1954 Mage_Core.csv       Assigned to rogerger.py progress 100%
   8538 Mage_Customer.csv Assigned to rogerger.py   progress:95%
-   124 Mage_Datafeed.csv
-   362 Mage_Directory.csv
-  1884 Mage_Eav.csv
-    38 Mage_Giftcert.csv
-    36 Mage_GoogleCheckout.csv
-  3619 Mage_Install.csv
+   124 Mage_Datafeed.csv    Assigned to rogerger.py  progress: 100%
+   362 Mage_Directory.csv   Assigned to rogerger.py  progress: 100%
+  1884 Mage_Eav.csv         Assigned to rogerger.py  progress: 100%
+    38 Mage_Giftcert.csv    Assigned to rogerger.py  progress: 100%
+    36 Mage_GoogleCheckout.csv   Assigned to rogerger.py  progress: 100%
+  3619 Mage_Install.csv       Assigned to rogerger.py progress: 50%
   1324 Mage_Newsletter.csv
   4075 Mage_Page.csv
    722 Mage_Payment.csv
