--- a/trunk/app/locale/zh_TW/Mage_Install.csv
+++ b/trunk/app/locale/zh_TW/Mage_Install.csv
@@ -16,54 +16,54 @@
 "Password Confirmation","密碼確認"
 "Go to Frontend","移至前台"
 "Secure Protocol","安全協定"
-"For HTTPS connections, default port is 443.","HTTPS 安全連接, 預設端口為 443。"
+"For HTTPS connections, default port is 443.","HTTPS 安全連接, 預設埠口為 443。"
 "I agree to the above terms and conditions","我同意上述條款"
 "First Name","名"
-"Before you continue to your store, please make a note of your encryption key (Magento uses it to encrypt passwords, credit cards and more).","Before you continue to your store, please make a note of your encryption key (Magento uses it to encrypt passwords, credit cards and more)."
-"Database Connection","Database Connection"
-"Secure Connection","Secure Connection"
-"Create Admin Account","Create Admin Account"
-"Email","Email"
-"Host name","Host name"
-"Go to Backend","Go to Backend"
-"Base Path","Base Path"
-"Login Information","Login Information"
-"Password","Password"
-"Localization","Localization"
-"Secure www base path","Secure www base path"
-"User Name","User Name"
-"Skip URL validation","Skip URL validation"
-"User Password","User Password"
-"Host","Host"
-"Welcome to Magento's Installation Wizard","Welcome to Magento's Installation Wizard"
-"WWW base path","WWW base path"
-"For HTTP connections, the default port is 80.","For HTTP connections, the default port is 80."
-"Secure Port","Secure Port"
-"Required Fields","Required Fields"
-"Configuration","Configuration"
-"You're All Set","You're All Set"
-"Having trouble installing Magento?","Having trouble installing Magento?"
-"Username","Username"
-"Installation","Installation"
-"Email Address","Email Address"
-"(Make sure you keep it in a safe place.)","(Make sure you keep it in a safe place.)"
-"Connection","Connection"
-"Continue","Continue"
-"Locale settings","Locale settings"
-"Secure Base Path","Secure Base Path"
-"Configuration options","Configuration options"
-"Database user name","Database user name"
-"Check out our","Check out our"
-"Protocol","Protocol"
-"Magento uses this key to encrypt passwords, credit cards and more. If this field is left empty the system will create an encription key for you and will display it on the next page.","Magento uses this key to encrypt passwords, credit cards and more. If this field is left empty the system will create an encription key for you and will display it on the next page."
-"Database host","Database host"
-"Last Name","Last Name"
-"Secure Host","Secure Host"
-"Default store","Default store"
-"Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
-"Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
-"Check this box only if you are unable to automatically validate Magento URL, for example if HTTP authentication is required.","Check this box only if you are unable to automatically validate Magento URL, for example if HTTP authentication is required."
-"Database user password","Database user password"
-"Encryption Key","Encryption Key"
-"Port","Port"
-"Personal Information","Personal Information"
+"Before you continue to your store, please make a note of your encryption key (Magento uses it to encrypt passwords, credit cards and more).","在您進入您的商店之前，請記下您的編碼鑰匙 (Magento 用編碼要遲來加密密碼，信用卡號，等...）。"
+"Database Connection","資料庫連接"
+"Secure Connection","安全連接"
+"Create Admin Account","建立管理員帳戶"
+"Email","電子郵件"
+"Host name","主機名稱"
+"Go to Backend","返回後台"
+"Base Path","基準目錄"
+"Login Information","登入資料"
+"Password","密碼"
+"Localization","本地化"
+"Secure www base path","安全 www 基礎目錄"
+"User Name","使用者名稱"
+"Skip URL validation","略過 URL 認證"
+"User Password","用戶密碼"
+"Host","主機"
+"Welcome to Magento's Installation Wizard","歡迎進入 Magento's 安裝嚮導"
+"WWW base path","WWW 基礎目錄"
+"For HTTP connections, the default port is 80.","HTTP 連接的預設埠口為 80."
+"Secure Port","安全埠口"
+"Required Fields","必填欄"
+"Configuration","設定"
+"You're All Set","設定完成！"
+"Having trouble installing Magento?","安裝 Magento 過程中有問題？"
+"Username","用戶名"
+"Installation","安裝"
+"Email Address","電子郵件"
+"(Make sure you keep it in a safe place.)","（請確定將此記於安全的地方）"
+"Connection","連接"
+"Continue","繼續"
+"Locale settings","本地化設定"
+"Secure Base Path","安全基礎目錄"
+"Configuration options","設定選項"
+"Database user name","資料庫用戶名稱"
+"Check out our","查看我們的"
+"Protocol","通訊協定"
+"Magento uses this key to encrypt passwords, credit cards and more. If this field is left empty the system will create an encription key for you and will display it on the next page.","Magento 用此鑰匙來加密密碼，信用卡，等.... 如果此欄位未填，系統將為您自動建立一組加密鑰匙並顯示於下一頁。"
+"Database host","資料庫主機"
+"Last Name","名"
+"Secure Host","安全主機"
+"Default store","預設商店"
+"Get ready to experience Open-Source eCommerce Evolved.","準備體驗進化的 Open Source 電子商務。"
+"Please set all required settings before clicking Continue","在按繼續之前請設定好所有必填的欄位"
+"Check this box only if you are unable to automatically validate Magento URL, for example if HTTP authentication is required.","如果您無發自動審核 Magento URL（例如需要 HTTPS 認證），請將此處打勾。"
+"Database user password","資料庫用戶密碼"
+"Encryption Key","加密鑰匙"
+"Port","埠口"
+"Personal Information","個人資料"
