--- a/trunk/app/locale/zh_TW/Mage_Payment.csv
+++ b/trunk/app/locale/zh_TW/Mage_Payment.csv
@@ -1,27 +1,27 @@
-"September","September"
-"February","February"
-"October","October"
-"March","March"
-"August","August"
-"May","May"
-"January","January"
+"September","九月"
+"February","二月"
+"October","十月"
+"March","三月"
+"August","八月"
+"May","五月"
+"January","一月"
 "Master Card","Master Card"
-"Year","Year"
-"June","June"
+"Year","年"
+"June","六月"
 "Discover","Discover"
-"Month","Month"
-"April","April"
+"Month","月"
+"April","四月"
 "American Express","American Express"
 "Visa","Visa"
-"Please select credit card type","Please select credit card type"
-"December","December"
-"July","July"
-"November","November"
-"Credit Card Type","Credit Card Type"
-"What is this?","What is this?"
-"Card Type","Card Type"
-"Card Verification Number","Card Verification Number"
-"Credit Card Number","Credit Card Number"
-"Purchase Order Number","Purchase Order Number"
-"Name on Card","Name on Card"
-"Expiration Date","Expiration Date"
+"Please select credit card type","請選擇信用卡種類"
+"December","十二月"
+"July","七月"
+"November","十一月"
+"Credit Card Type","信用卡種類"
+"What is this?","這是甚麼？"
+"Card Type","卡別"
+"Card Verification Number","認證號碼"
+"Credit Card Number","信用卡號碼"
+"Purchase Order Number","訂單編號"
+"Name on Card","持卡人姓名"
+"Expiration Date","有效日期"
