--- a/trunk/app/locale/zh_TW/Mage_Sales.csv
+++ b/trunk/app/locale/zh_TW/Mage_Sales.csv
@@ -1,87 +1,87 @@
-"City","City"
-"Store to Quote rate","Store to Quote rate"
-"Credit Memo","Credit Memo"
-"Quote currency","Quote currency"
-"My Orders","My Orders"
+"City","市"
+"Store to Quote rate","儲存至報價折扣"
+"Credit Memo","付款備註"
+"Quote currency","報價幣種"
+"My Orders","我的訂單"
 "Discover","Discover"
-"State/Province","State/Province"
-"First Name","First Name"
-"Store Credit","Store Credit"
-"No invoice for credit memo","No invoice for credit memo"
-"Customer Notes","Customer Notes"
-"Email","Email"
-"Pending","Pending"
-"There's not enough qty of product '%s' in invoice to return","There's not enough qty of product '%s' in invoice to return"
-"Fax","Fax"
-"Returned","Returned"
-"Canceled","Canceled"
-"Unknown invoice type","Unknown invoice type"
-"Company","Company"
-"Errors during order creation","Errors during order creation"
-"Store currency","Store currency"
-"Discount","Discount"
+"State/Province","州/省"
+"First Name","名"
+"Store Credit","商店積分"
+"No invoice for credit memo","無可加付款備註的訂單"
+"Customer Notes","顧客備註"
+"Email","電子郵件"
+"Pending","等待中"
+"There's not enough qty of product '%s' in invoice to return","您的發票中並沒有足夠的商品 '%s' 退還數量。 "
+"Fax","傳真"
+"Returned","退回"
+"Canceled","取消"
+"Unknown invoice type","未知的訂單種類"
+"Company","公司"
+"Errors during order creation","建立訂單中發生錯誤"
+"Store currency","商店幣種"
+"Discount","折價"
 "American Express","American Express"
-"Zip/Postal Code","Zip/Postal Code"
-"Sent","Sent"
-"Shipping Method","Shipping Method"
-"Subtotal","Subtotal"
-"Last Name","Last Name"
-"Unknown Status","Unknown Status"
-"Base currency","Base currency"
-"Backordered","Backordered"
+"Zip/Postal Code","郵遞區號"
+"Sent","已寄出"
+"Shipping Method","寄送方式"
+"Subtotal","小計"
+"Last Name","姓"
+"Unknown Status","未知的狀態"
+"Base currency","基礎幣種"
+"Backordered","缺貨"
 "Visa","Visa"
-"Quote Status","Quote Status"
-"Grand Total","Grand Total"
-"Payed","Payed"
-"Order Details","Order Details"
-"Shipped","Shipped"
+"Quote Status","報價狀態"
+"Grand Total","總額"
+"Payed","已付"
+"Order Details","訂單詳細資料"
+"Shipped","已寄出"
 "Master Card","Master Card"
-"Mixed","Mixed"
-"Original order ID","Original order ID"
-"Store to Base rate","Store to Base rate"
-"Same as billing","Same as billing"
-"No order for invoice","No order for invoice"
-"Partial","Partial"
-"Unknown Type","Unknown Type"
-"Weight","Weight"
-"Shipping & Handling","Shipping & Handling"
-"Order Invoices","Order Invoices"
-"Street Address","Street Address"
-"Tax","Tax"
-"Telephone","Telephone"
-"There's not enough qty of product '%s' in order to ship","There's not enough qty of product '%s' in order to ship"
-"Coupon","Coupon"
-"Invoice","Invoice"
-"Gift certificate","Gift certificate"
-"Order #%s - %s","Order #%s - <small><em>%s</em></small>"
-"Shipping Amount","Shipping Amount"
-"Ship to","Ship to"
-"View Order","View Order"
-"Price","Price"
-"Billing Address","Billing Address"
-"Order Date: %s","<p><strong>Order Date:</strong> %s</p>"
-"Print All Invoices","Print All Invoices"
-"Order Total","Order Total"
-"Status","Status"
-"Payment Method","Payment Method"
-"Track Order","Track Order"
-"View All","View All"
-"Recent Orders","Recent Orders"
-"Date","Date"
-"Qty Ordered","Qty Ordered"
-"My Orders - Details","My Orders - Details"
-"About Your Order","About Your Order"
-"Product Name","Product Name"
-"Tax Amount","Tax Amount"
-"Invoice #%s","Invoice #%s"
-"Items Ordered","Items Ordered"
-"Order #","Order #"
-"Order Status","Order Status"
-"View Invoices","View Invoices"
-"Order #%s","Order #%s"
-"You have placed no orders.","You have placed no orders."
-"Qty Shipped","Qty Shipped"
-"Order Subtotal","Order Subtotal"
-"Print Invoice","Print Invoice"
-"Back to My Orders","Back to My Orders"
-"Shipping Address","Shipping Address"
+"Mixed","混和"
+"Original order ID","原來的訂單號碼"
+"Store to Base rate","儲存到基礎折扣"
+"Same as billing","和收款人相同"
+"No order for invoice","發票無訂單"
+"Partial","部份"
+"Unknown Type","未知種類"
+"Weight","重量"
+"Shipping & Handling","郵寄和處理"
+"Order Invoices","訂單發票"
+"Street Address","街道地址"
+"Tax","稅"
+"Telephone","電話"
+"There's not enough qty of product '%s' in order to ship","訂單內沒有足夠的 '%s' 數量寄送"
+"Coupon","折價卷"
+"Invoice","發票"
+"Gift certificate","禮物代金卷"
+"Order #%s - %s","訂單 #%s - <small><em>%s</em></small>"
+"Shipping Amount","寄送總額"
+"Ship to","寄給"
+"View Order","查看訂單"
+"Price","價格"
+"Billing Address","收款地址"
+"Order Date: %s","<p><strong>訂單日期：</strong> %s</p>"
+"Print All Invoices","列印所有訂單"
+"Order Total","訂單合計"
+"Status","狀態"
+"Payment Method","付款方式"
+"Track Order","追蹤訂單"
+"View All","查看所有"
+"Recent Orders","最近的訂單"
+"Date","日期"
+"Qty Ordered","訂購數量"
+"My Orders - Details","我的訂單 - 詳細"
+"About Your Order","關於我的訂單"
+"Product Name","商品名稱"
+"Tax Amount","稅額"
+"Invoice #%s","發票 #%s"
+"Items Ordered","訂購的商品"
+"Order #","訂單號 #"
+"Order Status","訂單狀態"
+"View Invoices","查看發票"
+"Order #%s","訂單號 #%s"
+"You have placed no orders.","您未下任何訂單。"
+"Qty Shipped","寄出數量"
+"Order Subtotal","訂單小計"
+"Print Invoice","列印發票"
+"Back to My Orders","回到我的訂單"
+"Shipping Address","寄送地址"
