--- a/trunk/app/locale/zh_TW/Mage_SalesRule.csv
+++ b/trunk/app/locale/zh_TW/Mage_SalesRule.csv
@@ -1,20 +1,20 @@
-"To Fixed Value","To Fixed Value"
-"Customer registered: %s","Customer registered: %s"
-"Row total in cart","Row total in cart"
-"Description: %s","Description: %s"
-"Customer is new buyer: %s","Customer is new buyer: %s"
-"Expire at: %s","Expire at: %s"
-"By Fixed value","By Fixed value"
-"Update the Product","Update the Product"
-"To Percentage","To Percentage"
-"Attribute Set","Attribute Set"
-"Start at: %s","Start at: %s"
-"Product attribute combination","Product attribute combination"
-"By Percentage","By Percentage"
-"Price in cart","Price in cart"
-"Quantity in cart","Quantity in cart"
-"Name: %s","Name: %s"
-"Update product's %s %s: %s","Update product's %s %s: %s"
-"Invalid item entity","Invalid item entity"
-"Conditions combination","Conditions combination"
-"Special price","Special price"
+"To Fixed Value","至固定值"
+"Customer registered: %s","註冊顧客： %s"
+"Row total in cart","購物車中的總行數"
+"Description: %s","敘述： %s"
+"Customer is new buyer: %s","顧客為新買家： %s"
+"Expire at: %s","到期日： %s"
+"By Fixed value","使用固定值"
+"Update the Product","更新此商品"
+"To Percentage","至百分比"
+"Attribute Set","屬性組"
+"Start at: %s","開始於： %s"
+"Product attribute combination","商品屬性組合"
+"By Percentage","使用百分比"
+"Price in cart","購物車中的價錢"
+"Quantity in cart","購物車中的數量"
+"Name: %s","名稱： %s"
+"Update product's %s %s: %s","更新產品的 %s %s: %s"
+"Invalid item entity","錯誤的商品實體"
+"Conditions combination","條件組合"
+"Special price","特別價"
